--- a/package.json
+++ b/package.json
@@ -3,7 +3,5 @@
     "@types/node": "^17.0.39",
     "typescript": "^4.7.2"
   },
-  "dependencies": {
-    "execa": "^6.1.0"
-  }
+  "dependencies": {}
 }
